--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="video"></div>
     <script
       type="module"
       src="/src/main.jsx"
